--- a/backend/frontend/tsconfig.json
+++ b/backend/frontend/tsconfig.json
@@ -1,14 +1,11 @@
-
-
 {
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "module": "ESNext",
-    "moduleResolution": "Node",
     "jsx": "react-jsx",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "strict": true,
-    "esModuleInterop": true,
     "skipLibCheck": true
   },
   "include": ["src"]
