--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
-    "test": "jest"
-  },
+  "dev": "ts-node-dev src/server.ts",
+  "build": "tsc",
+  "start": "node dist/server.js",
+  "test": "jest"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
