--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,3 +1,17 @@
+// {
+//   "compilerOptions": {
+//     "target": "ESNext",
+//     "lib": ["DOM", "DOM.Iterable", "ESNext"],
+//     "jsx": "react-jsx",
+//     "module": "ESNext",
+//     "moduleResolution": "Bundler",
+//     "strict": true,
+//     "skipLibCheck": true
+//   },
+//   "include": ["src"]
+// }
+
+
 {
   "compilerOptions": {
     "target": "ESNext",
@@ -6,7 +20,12 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src"]
 }
